--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -27,8 +27,8 @@
           </div>
           <div class="">
             <div class="mb-2">
-              <%= f.label :animal_type_name_eq %>
-              <%= f.collection_select(:animal_type_name_eq, @animal_types, :name, :name, { include_blank: "#{t('text.Select')} ..." }, { class: 'input_text_field' }) %>
+              <%= f.label :animal_type_name_eq, "#{t('activerecord.attributes.animal.animal_type_id')}" %>
+              <%= f.collection_select(:animal_type_name_eq, animal_types, :name, :name, { include_blank: "#{t('text.Select')} ..." }, { class: 'input_text_field' }) %>
             </div>
             <div class="mb-2">
               <%= f.label :nickname_cont %>
@@ -61,7 +61,7 @@
             </div>
             <div class="mb-2">
               <%= f.label :aviary_name_eq %>
-              <%= f.collection_select(:aviary_name_eq, @aviaries, :name, :name, { include_blank: "#{t('text.Select')}" }, { class: 'input_text_field' }) %>
+              <%= f.collection_select(:aviary_name_eq, aviaries, :name, :name, { include_blank: "#{t('text.Select')}" }, { class: 'input_text_field' }) %>
             </div>
             <div class="mb-2">
               <%= f.label :description_cont %>
