--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -101,6 +101,11 @@
               <%= f.label :description_or_history_cont %>
               <%= f.search_field :description_or_history_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
             </div>
+
+            <div>
+              <%= f.label :notes_body_cont %>
+              <%= f.search_field :notes_body_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
+            </div>
             
             <div class="my-2 col-span-2 flex justify-start">
               <div class="mr-2">
