--- a/app/views/medical_procedures/index.html.erb
+++ b/app/views/medical_procedures/index.html.erb
@@ -31,7 +31,7 @@
               <%= f.search_field :animal_nickname_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
             </div>
             <div class="mb-2">
-              <%= f.label :procedure_type_name_eq %>
+              <%= f.label :procedure_type_name_eq, "#{t('activerecord.attributes.medical_procedure.procedure_type_id')}" %>
               <%= f.collection_select(:procedure_type_name_eq, @procedure_types, :name, :name, { include_blank: "#{t('text.Select')} ..."}, { class: 'input_text_field' }) %>
             </div>
             <div class="flex items-end mb-2">
