--- a/app/views/animals/_picture_list.html.erb
+++ b/app/views/animals/_picture_list.html.erb
@@ -1,7 +1,7 @@
 <%= turbo_frame_tag 'animals' do %>
   <%= form_with url: cart_add_path, method: :post, 
       data: { controller: "checkboxselectall",
-                target: "form",
+                checkboxselectall_target: "form",
                 action: "submit->checkboxselectall#submitForm",
                 turbo_frame: "_top" 
               } do |form| %>
