--- a/app/views/animals/_animal_medicine.html.erb
+++ b/app/views/animals/_animal_medicine.html.erb
@@ -1,4 +1,8 @@
-<h2><%= t('text.Medical Procedures') %></h2>
+
+<div class="flex justify-between mb-2">
+  <h2><%= t('text.Medical Procedures') %></h2> 
+  <%= link_to t('menu.new'), new_medical_procedure_for_animal_path(animal_id: @animal.id), class: "primary_button" %>
+</div>
 <%= turbo_frame_tag 'procedures' do %>
   <div class="min-w-full">
     <table class="mi_table" id="desk-table">
@@ -7,11 +11,13 @@
           <th class="header_th"><%= t('activerecord.attributes.medical_procedure.procedure_type_id') %></th>
           <th class="header_th"><%= t('activerecord.attributes.medical_procedure.date_planned') %></th>
           <th class="header_th"><%= t('activerecord.attributes.medical_procedure.date_completed') %></th>
+          <th class="header_th"><%= t('forms.buttons.edit') %></th>
+          <th class="header_th"><%= t('forms.buttons.delete') %></th>
         </tr>
       </thead>
       <tbody>
         <% @medical_procedures.each do |procedure| %>
-          <rt>
+          <tр>
             <td class="mi_tbody_td">
               <%= link_to procedure.procedure_type.name, medical_procedure_path(procedure), class: "link_to", data: {turbo_frame: "_top"} %>
             </td>
@@ -20,6 +26,16 @@
             </td>
             <td class="mi_tbody_td">
               <%= show_date_with_month_name(procedure.date_completed) %>
+            </td>
+            <td class="mi_tbody_td">
+              <%= link_to edit_medical_procedure_for_animal_path(procedure), data: { turbo_frame: "_top" }, aria: { label: "#{dom_id(procedure)}_edit" } do%>
+                <i class="fa fa-pencil text-950"></i>
+              <% end %>
+            </td>
+            <td class="mi_tbody_td">
+              <%= link_to medical_procedure_path(procedure), data: { turbo_confirm: t('text.Are you sure?'), turbo_method: :delete}, aria: { label: "#{dom_id(procedure)}_delete" }  do %>
+                <i class="fa fa-trash-can text-red-950"></i>
+              <% end %>
             </td>
           </tr>
         <% end %>
