--- a/app/views/medical_procedures/new_medical_procedure_for_animal.html.erb
+++ b/app/views/medical_procedures/new_medical_procedure_for_animal.html.erb
@@ -1,6 +1,6 @@
 <div class="mx-auto md:w-2/3 w-full">
   <h1 class="font-bold text-4xl"><%= t('text.New Medical Procedure') %></h1>
 
-  <%= render "form", medical_procedure: @medical_procedure, animal: nil, return_to_animal: false %>
+  <%= render "form", medical_procedure: @medical_procedure, animal: @animal, return_to_animal: true %>
 
 </div>
