--- a/app/views/animals/_animal.html.erb
+++ b/app/views/animals/_animal.html.erb
@@ -147,6 +147,10 @@
 
     </div>
     <div>
+      <div class="flex justify-between mb-2">
+        <h2><%= t('text.Medical Procedures') %></h2> 
+        <%= link_to t('menu.new'), new_medical_procedure_for_animal_path(animal_id: @animal.id), class: "primary_button" %>
+      </div>
       <%= render 'animal_medicine' %>
       <%= render 'pictures' %>
     </div>
