--- a/app/views/medical_procedures/edit.html.erb
+++ b/app/views/medical_procedures/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="mx-auto md:w-2/3 w-full">
   <h1 class="font-bold text-4xl"><%= t('text.Editing Medical Procedure') %></h1>
 
-  <%= render "form", medical_procedure: @medical_procedure, animal: @medical_procedure.animal, return_to_animal: false %>
+  <%= render "form", medical_procedure: @medical_procedure, animal: @medical_procedure.animal, return_to_animal: @return_to_animal %>
 
 </div>
