--- a/app/views/procedure_types/_type_list.html.erb
+++ b/app/views/procedure_types/_type_list.html.erb
@@ -24,7 +24,7 @@
               <% end %>
             </td>
             <td class="mi_tbody_td">
-              <%= link_to procedure_type_path(procedure_type), data: { turbo_confirm: 'Are you sure you want to delete this rover?', turbo_method: :delete}, aria: { label: "#{dom_id(procedure_type)}_delete" }  do %>
+              <%= link_to procedure_type_path(procedure_type), data: { turbo_confirm: t('text.Are you sure?'), turbo_method: :delete}, aria: { label: "#{dom_id(procedure_type)}_delete" }  do %>
               <i class="fa fa-trash-can text-red-950"></i>
               <% end %>
           </tr>
