fix section selection

--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -87,16 +87,16 @@
     <%= form.collection_select(:aviary_id, aviaries, :id, :name, { include_blank: "#{t('text.Select')} ..." }, { "data-action": "change->animal#getSections", "data-animal-target": "aviary_select", "class": "input_text_field" } ) %>
   </div>
 
-  <% if @animal.persisted? %>
+  <% if @animal.persisted? || @section_id.present? %>
     <% if @animal.aviary&.has_sections %>
       <div class="" data-animal-target="show_sections">
         <%= form.label :section_id %>
-        <%= form.collection_select :section_id, sections, :id, :name, { include_blank: "#{t('text.Select')} ..." }, { selected: @animal.section_id.present? ? @animal.section_id : "", "data-animal-target": "section", class: "input_text_field" } %>
+        <%= form.collection_select :section_id, @sections, :id, :name, { include_blank: "#{t('text.Select')} ..." }, { selected: @section_id.present? ? @section_id: nil, "data-animal-target": "section", class: "input_text_field" } %>
       </div>
     <% else %>
       <div class="hidden" data-animal-target="show_sections">
         <%= form.label :section_id %>
-        <%= form.collection_select :section_id, sections, :id, :name, { include_blank: "#{t('text.Select')} ..." }, { "data-animal-target": "section", class: "input_text_field" } %>
+        <%= form.collection_select :section_id, sections, :id, :name, { include_blank: "#{t('text.Select')} ..." }, { selected: @section_id.present? ? @section_id: nil, "data-animal-target": "section", class: "input_text_field" } %>
       </div>
     <% end %>
   <% else %>
