--- a/app/views/medical_procedures/index.html.erb
+++ b/app/views/medical_procedures/index.html.erb
@@ -15,7 +15,7 @@
                   turbo_frame: "turbo-medical-procedures"
                   } do |f| %>
           <div class="col-span-2 mb-4 flex justify-start">
-            <p><%= t('text.Group searching conditions by') %>:</p>
+            <p><%= t('text.Group search by') %>:</p>
             <div class="ml-4">
               <%= f.radio_button :m, 'and', :checked => true %>
               <%= f.label :m, t('label.and'), value: 'and' %>
