--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -40,7 +40,7 @@
         <div class="z-50 sidebar w-72 absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out">
 
           <div class="col-span-2 mb-4 flex justify-start">
-            <p><%= t('text.Group searching conditions by') %>:</p>
+            <p><%= t('text.Group search by') %>:</p>
             <div class="ml-4">
               <%= f.radio_button :m, 'and', :checked => true %>
               <%= f.label :m, t('label.and'), value: 'and' %>
@@ -52,37 +52,37 @@
           </div>
           <div class="">
             <div class="mb-2">
-              <%= f.label :animal_type_name_eq, "#{t('activerecord.attributes.animal.animal_type_id')}" %>
-              <%= f.collection_select(:animal_type_name_eq, animal_types, :name, :name, { include_blank: "#{t('text.Select')} ..." }, { class: 'input_text_field' }) %>
+              <%= f.label :animal_type_name_eq, "#{t('activerecord.attributes.animal.animal_type_id')}", class: "fancy_label" %>
+              <%= f.collection_select(:animal_type_name_eq, animal_types, :name, :name, { include_blank: "#{t('text.Select')} ..." }, { class: 'filter_select' }) %>
             </div>
             <div class="mb-2">
-              <%= f.label :nickname_cont %>
-              <%= f.search_field :nickname_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
+              <%= f.label :nickname_cont, class: "fancy_label" %>
+              <%= f.search_field :nickname_cont, placeholder: t('text.Contains'), class: 'filter_select' %>
             </div>
             <div class="mb-2">
-              <%= f.label :surname_cont %>
-              <%= f.search_field :surname_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
+              <%= f.label :surname_cont, class: "fancy_label" %>
+              <%= f.search_field :surname_cont, placeholder: t('text.Contains'), class: 'filter_select' %>
             </div>
             <div class="mb-2">
-              <%= f.label :gender %>
-              <%= f.select(:gender_eq, gender_lists, { include_blank: "#{t('text.Select')} ..." }, { class: "input_text_field" }) %>
+              <%= f.label :gender, class: "fancy_label" %>
+              <%= f.select(:gender_eq, gender_lists, { include_blank: "#{t('text.Select')} ..." }, { class: "filter_select" }) %>
             </div>
             <div class="mb-2">
               <%= f.checkbox :sterilization_eq, class: "check_box" %>
               <%= f.label :sterilization_eq, "#{t('activerecord.attributes.animal.sterilization')}" %>
             </div>
-            <div class="flex items-end mb-2">
-              <div class="flex-1 w-1/2">
-                <%= f.label :arival_date_gteq, "#{t('activerecord.attributes.animal.arival_date')}" %>
-                <%= f.text_field :arival_date_gteq, placeholder: t('text.From'), class: 'input_text_field',
+            <div class="">
+              <div class="">
+                <%= f.label :arival_date_gteq, "#{t('activerecord.attributes.animal.arival_date')}", class: "fancy_label" %>
+                <%= f.text_field :arival_date_gteq, placeholder: t('text.From'), class: 'filter_select',
                   data: {
                     controller: "flatpickr",
                     flatpickr_date_format: "d-m-Y"
                   } %>
               </div>
-              <div class="ml-1 flex-1 w-1/2">
+              <div class="mt-2 ml-2">
                 <%= f.label :arival_date_lteq, class: "hidden" %>
-                <%= f.text_field :arival_date_lteq, placeholder: t('text.To'), class: 'input_text_field',
+                <%= f.text_field :arival_date_lteq, placeholder: t('text.To'), class: 'filter_select',
                   data: {
                     controller: "flatpickr",
                     flatpickr_date_format: "d-m-Y"
@@ -90,17 +90,17 @@
               </div>
             </div>
             <div class="mb-2">
-              <%= f.label :aviary_name_eq, "#{t('activerecord.attributes.animal.aviary_id')}"  %>
-              <%= f.collection_select(:aviary_name_eq, aviaries, :name, :name, { include_blank: "#{t('text.Select')}" }, { class: 'input_text_field' }) %>
+              <%= f.label :aviary_name_eq, "#{t('activerecord.attributes.animal.aviary_id')}", class: "fancy_label" %>
+              <%= f.collection_select(:aviary_name_eq, aviaries, :name, :name, { include_blank: "#{t('text.Select')}" }, { class: 'filter_select' }) %>
             </div>
 
             <div>
               <%= f.label :description_or_from_people_or_from_place_or_history_or_notes_body_cont, "#{t('label.Search the Rest of Text Fields')}" %>
-              <%= f.search_field :description_or_from_people_or_from_place_or_history_or_notes_body_cont, placeholder: t('text.Contains'), class: 'input_text_field' %>
+              <%= f.search_field :description_or_from_people_or_from_place_or_history_or_notes_body_cont, placeholder: t('text.Contains'), class: 'filter_select' %>
             </div>
 
             <div class="my-2 col-span-2 flex justify-start">
-              <div class="mr-2">
+              <div>
                 <%= f.submit t('forms.buttons.search'), data: { disable_with: false }, class: "primary_button" %>
               </div>
               <div>
