--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -95,7 +95,7 @@
             </div>
 
             <div>
-              <%= f.label :description_or_from_people_or_from_place_or_history_or_notes_body_cont, "#{t('label.Search the Rest of Text Fields')}" %>
+              <%= f.label :description_or_from_people_or_from_place_or_history_or_notes_body_cont, "#{t('label.Search Text Fields')}" %>
               <%= f.search_field :description_or_from_people_or_from_place_or_history_or_notes_body_cont, placeholder: t('text.Contains'), class: 'filter_select' %>
             </div>
 
