--- a/app/views/medical_procedures/index.html.erb
+++ b/app/views/medical_procedures/index.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="relative min-h-screen md:flex">
-    <div class="z-50 sidebar w-58 absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out">
+    <div class="z-50 sidebar w-62 absolute inset-y-0 left-0 transform -translate-x-full md:relative md:translate-x-0 transition duration-200 ease-in-out">
       <div data-controller="animal">
         <%= search_form_for @q,
           data: { animal_target: "form",
@@ -27,7 +27,7 @@
           </div>
           <div class="">
             <div class="mb-2">
-              <%= f.label :animal_nickname_cont, t('text.Animal Nickname contains'), class: "fancy_label" %>
+              <%= f.label :animal_nickname_cont, t('text.Nickname contains'), class: "fancy_label" %>
               <%= f.search_field :animal_nickname_cont, placeholder: t('text.Contains'), class: 'filter_select' %>
             </div>
             <div class="mb-2">
