--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,7 @@
                   <%= link_to t('menu.header.types'), animal_types_path, class: "nav-sub-link" %>
                   <%= link_to t('menu.header.animals'), animals_path, class: "nav-sub-link" %>
                   <%= link_to t('menu.header.aviaries'), aviaries_path, class: "nav-sub-link" %>
+                  <%= link_to t('menu.header.statuses'), animal_statuses_path, class: "nav-sub-link" %>
                 </div>
               </div>
               <div class="group relative cursor-pointer">
